task_2/serv_canary.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web-2
  name: web-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-2
  type: ClusterIP
status:
  loadBalancer: {}
