task_2/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web-canary
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
#    nginx.ingress.kubernetes.io/canary-by-header: "canary"
#    nginx.ingress.kubernetes.io/canary-by-header-value: "always"
spec:
  rules:
  - host: k8s.pavlov.com
    http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: web-2
             port:
              number: 80
